# dyad

./: *local*  .#*local*  .gitignore  .python-version  .readthedocs.yaml  MANIFEST.in  README.md  docstrings.org  environment.yml  paper.bib  paper.md  pyproject.toml  pyproject.toml~  requirements.txt  requirements.txt~  setup.py
_dev/: _dyad_delaunay.py
dev/: _kinematics
docs/: #*local*#  *local*  .#*local*
dyad/: #*Python*#  #_core.py#  *Python*  .#_core.py  __init__.py  _constants.py  _core.py
dyad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
env/: pyvenv.cfg
examples/: README.md  README.md~  duquennoy1991_population.py  moe2017_population.py  moe2017_population.py~  test.py
tests/: .coverage  _test.py  data_test_argument_of_pericentre.py  data_test_core.py  data_test_eccentricity.py  data_test_eccentricity.py~  data_test_inclination.py  data_test_log_period.py  data_test_longitude_of_ascending_node.py  data_test_mass.py  data_test_mass_ratio.py  data_test_primary_mass.py  data_test_secondary_mass.py  data_test_semimajor_axis.py  data_test_true_anomaly.py  test_core.py  test_core.py~  test_stats_argument_of_pericentre.py  test_stats_eccentricity.py  test_stats_inclination.py  test_stats_inclination.py~  test_stats_infrastructure.py  test_stats_infrastructure.py~  test_stats_log_period.py  test_stats_longitude_of_ascending_node.py  test_stats_mass.py  test_stats_mass.py~  test_stats_mass_ratio.py  test_stats_mass_ratio.py~  test_stats_primary_mass.py  test_stats_secondary_mass.py  test_stats_semimajor_axis.py  test_stats_true_anomaly.py
(+174 files in other folders)
